--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://myrecipe-backend.onrender.com
+REACT_APP_API_URL=https://recipe-webservice.onrender.com
 # 백앤드 배포했을떄 수조 바꾸기 #
