--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,22 @@
 Flask==3.1.1
-flask-cors==6.0.1
-Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
-gunicorn==23.0.0
-python-dotenv==1.1.1
-cloudinary==1.44.1
+SQLAlchemy==2.0.41
+Flask-Migrate==4.1.0
+alembic==1.16.4
+Flask-JWT-Extended==4.7.1
+PyJWT==2.10.1
+Flask-Cors==6.0.1
+Flask-Bcrypt==1.0.1
 bcrypt==4.3.0
+Werkzeug==3.1.3
+Jinja2==3.1.6
+itsdangerous==2.2.0
+click==8.2.1
+python-dotenv==1.1.1
+gunicorn==23.0.0
+cloudinary==1.44.1
+blinker==1.9.0
+Mako==1.3.10
+certifi==2025.6.15
+typing_extensions==4.14.1
+packaging==25.0
